--- a/model.ipynb
+++ b/model.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -57,9 +53,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -79,9 +73,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -104,9 +96,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -119,9 +109,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -134,9 +122,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -149,9 +135,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -163,9 +147,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -180,9 +162,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -202,9 +182,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -228,9 +206,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -243,9 +219,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -280,9 +254,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -306,11 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -335,12 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -349,17 +313,17 @@
       "____________________________________________________________________________________________________\n",
       "Layer (type)                     Output Shape          Param #     Connected to                     \n",
       "====================================================================================================\n",
-      "Normalization (Lambda)           (None, 11, 32, 1)     0           lambda_input_2[0][0]             \n",
+      "Normalization (Lambda)           (None, 11, 32, 1)     0           lambda_input_1[0][0]             \n",
       "____________________________________________________________________________________________________\n",
-      "convolution2d_2 (Convolution2D)  (None, 11, 32, 2)     4           Normalization[0][0]              \n",
+      "convolution2d_1 (Convolution2D)  (None, 11, 32, 2)     4           Normalization[0][0]              \n",
       "____________________________________________________________________________________________________\n",
-      "maxpooling2d_2 (MaxPooling2D)    (None, 3, 8, 2)       0           convolution2d_2[0][0]            \n",
+      "maxpooling2d_1 (MaxPooling2D)    (None, 3, 8, 2)       0           convolution2d_1[0][0]            \n",
       "____________________________________________________________________________________________________\n",
-      "dropout_2 (Dropout)              (None, 3, 8, 2)       0           maxpooling2d_2[0][0]             \n",
+      "dropout_1 (Dropout)              (None, 3, 8, 2)       0           maxpooling2d_1[0][0]             \n",
       "____________________________________________________________________________________________________\n",
-      "flatten_2 (Flatten)              (None, 48)            0           dropout_2[0][0]                  \n",
+      "flatten_1 (Flatten)              (None, 48)            0           dropout_1[0][0]                  \n",
       "____________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                  (None, 1)             49          flatten_2[0][0]                  \n",
+      "dense_1 (Dense)                  (None, 1)             49          flatten_1[0][0]                  \n",
       "====================================================================================================\n",
       "Total params: 53\n",
       "Trainable params: 53\n",
@@ -383,13 +347,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 38572 samples, validate on 9644 samples\n",
+      "Epoch 1/30\n",
+      "38572/38572 [==============================] - 62s - loss: 0.1178 - val_loss: 0.0596\n",
+      "Epoch 2/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0641 - val_loss: 0.0536\n",
+      "Epoch 3/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0556 - val_loss: 0.0474\n",
+      "Epoch 4/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0477 - val_loss: 0.0392\n",
+      "Epoch 5/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0394 - val_loss: 0.0293\n",
+      "Epoch 6/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0353 - val_loss: 0.0272\n",
+      "Epoch 7/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0346 - val_loss: 0.0272\n",
+      "Epoch 8/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0347 - val_loss: 0.0270\n",
+      "Epoch 9/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0342 - val_loss: 0.0271\n",
+      "Epoch 10/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0340 - val_loss: 0.0267\n",
+      "Epoch 11/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0338 - val_loss: 0.0268\n",
+      "Epoch 12/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0336 - val_loss: 0.0265\n",
+      "Epoch 13/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0334 - val_loss: 0.0270\n",
+      "Epoch 14/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0336 - val_loss: 0.0272\n",
+      "Epoch 15/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0335 - val_loss: 0.0271\n",
+      "Epoch 16/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0333 - val_loss: 0.0271\n",
+      "Epoch 17/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0333 - val_loss: 0.0269\n",
+      "Epoch 18/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0331 - val_loss: 0.0273\n",
+      "Epoch 19/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0338 - val_loss: 0.0275\n",
+      "Epoch 20/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0333 - val_loss: 0.0271\n",
+      "Epoch 21/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0338 - val_loss: 0.0271\n",
+      "Epoch 22/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0333 - val_loss: 0.0271\n",
+      "Epoch 23/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0336 - val_loss: 0.0272\n",
+      "Epoch 24/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0335 - val_loss: 0.0272\n",
+      "Epoch 25/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0336 - val_loss: 0.0271\n",
+      "Epoch 26/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0336 - val_loss: 0.0270\n",
+      "Epoch 27/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0335 - val_loss: 0.0273\n",
+      "Epoch 28/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0336 - val_loss: 0.0275\n",
+      "Epoch 29/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0332 - val_loss: 0.0273\n",
+      "Epoch 30/30\n",
+      "38572/38572 [==============================] - 1s - loss: 0.0335 - val_loss: 0.0274\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f4f7efd59b0>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from keras.callbacks import EarlyStopping\n",
     "# Use Adam otimizer when compiling the model and mean square function to calculate loss\n",
@@ -412,13 +450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model to disk\n"
+     ]
+    }
+   ],
    "source": [
     "# for the new drive.py file\n",
     "from keras.models import model_from_json\n",
@@ -430,6 +472,15 @@
     "model.save(\"model.h5\")\n",
     "print(\"Saved model to disk\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
